# execution_domain

./: README.md  pyproject.toml  setup.py
execution_domain/: enums.py  value_objects.py
src/execution_domain/: commands.py
